# go_micro_rules

./: BUILD.bazel  README.md  compile.bzl  defs.bzl  library.bzl  repositories.bzl
